RESOLVED FIXED42395
Don't allow multiple calls to NetscapePluginStream::stop
https://bugs.webkit.org/show_bug.cgi?id=42395
Summary Don't allow multiple calls to NetscapePluginStream::stop
Anders Carlsson
Reported 2010-07-15 13:17:44 PDT
Don't allow multiple calls to NetscapePluginStream::stop
Attachments
Patch (6.17 KB, patch)
2010-07-15 13:20 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-07-15 13:20:10 PDT
Anders Carlsson
Comment 2 2010-07-15 13:23:44 PDT
Note You need to log in before you can comment on or make changes to this bug.