Don't allow multiple calls to NetscapePluginStream::stop https://bugs.webkit.org/show_bug.cgi?id=42395

Reviewed by Sam Weinig.

* WebProcess/Plugins/Netscape/NetscapePluginStream.cpp:
(WebKit::NetscapePluginStream::NetscapePluginStream):
Initialize m_urlNotifyHasBeenCalled.

(WebKit::NetscapePluginStream::~NetscapePluginStream):
Assert that the stream didn't need a URL notification or that one was sent.

(WebKit::NetscapePluginStream::sendJavaScriptStream):
Don't call stop in the JS failure case because the stream won't be started.

(WebKit::NetscapePluginStream::stop):
Remove m_isStarted check and add an assertion instead. Move code that calls NPP_URLNotify and
destroys the stream out to a separate function.

(WebKit::NetscapePluginStream::notifyAndDestroyStream):
Call NPP_URLNotify if necessary and destroy the stream.

* WebProcess/Plugins/Netscape/NetscapePluginStream.h:

Canonical link: https://commits.webkit.org/54301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63453 268f45cc-cd09-0410-ab3c-d52691b4dbfc